# bookish-train

./: .env.example  .env.truenas.example  .gitignore  AGENTS.md  README.md  docker-compose.observability.yml  docker-compose.phase1-assess.yml  docker-compose.truenas.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js
.beads/: README.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
backend/: Dockerfile  main.py  observability.py  requirements-dev.txt  requirements.txt  settings.py  sqlite_persistence.py  state.py
clients/common/: README.md  __init__.py  agent_context.py  client_interface.py  edge_observability.py  pyproject.toml  transfer_log.py
docs/: CONTAINER-SETUP.md  DEPLOYMENT.md  FRIEND-QUICKSTART.md  HOME-RELIABILITY-RANSOMWARE.md  OBSERVABILITY-SIGNOZ.md  PERSONAL-COMPUTER-MVP.md  RAILWAY-ARCHITECTURE.md  RANSOMWARE-README.md  SHARE-PLAN.md  TASKS.md  TRANSFER-PROTOCOL-TROUBLESHOOTING.md  TRUENAS-DEPLOYMENT.md  VALIDATION-WORKFLOW.md  otel-collector-config.yaml
frontend/: Dockerfile.prod  index.html  nginx.prod.conf  package-lock.json  package.json  vite.config.js
scripts/: backup-agent.py  beads-setup.sh  client-repository-demo.py  container-compose.sh  container-down.sh  copy-screenshots-to-docs.js  demo-observability.py  home-backup-chain-demo.py  phase1-assess.sh  phase1-scenario.sh  protocol-doctor.sh  requirements-observability.txt  requirements-text-ui.txt  restic-rclone-backup.py  run-backend.sh  run-demo.py  seed-demo-data.py  setup-agent-env.sh  silver-fiesta.py  start-backend.js  sync-test-data.sh  (+7 more)
(+59 files in other folders)
